Реализована возможность добавлять род и время работы.

--- a/ProductionAccounting.BL/ProductionAccounting.BL.csproj
+++ b/ProductionAccounting.BL/ProductionAccounting.BL.csproj
@@ -44,10 +44,13 @@
     <Compile Include="Controller\ControllerBase.cs" />
     <Compile Include="Controller\ProductionController.cs" />
     <Compile Include="Controller\UserController.cs" />
+    <Compile Include="Controller\WorkController.cs" />
     <Compile Include="Model\Gender.cs" />
     <Compile Include="Model\Production.cs" />
+    <Compile Include="Model\Productivity.cs" />
     <Compile Include="Model\Tare.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="Model\Work.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
