--- a/ProductionAccounting.BLTests/ProductionAccounting.BLTests.csproj
+++ b/ProductionAccounting.BLTests/ProductionAccounting.BLTests.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Controller\ProductionControllerTests.cs" />
     <Compile Include="Controller\UserControllerTests.cs" />
+    <Compile Include="Controller\WorkControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
